Camera2 API
Refactor the code to use Camera2 API. Implement virtual cameras (focal length) selection